# wattmaven-solarnetwork-tools

./: .cursorrules  .env.test.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  lefthook.yaml  pyproject.toml  pytest.ini
.github/workflows/: autofix-ci.yaml  cicd.yaml  commit-check.yaml  release.yaml  stale.yaml
examples/: README.md
examples/basic/: main.py  settings.py
src/wattmaven_solarnetwork_tools/core/: authentication.py  solarnetwork_client.py
tests/: conftest.py
tests/integration/core/: test_solarnetwork_client.py
tests/unit/core/: test_authentication.py
