[project]
name = "wattmaven-solarnetwork-tools"
dynamic = ["version"]
license = { text = "MIT" }
description = "The WattMaven SolarNetwork tools."
readme = "README.md"
authors = [
    { name = "Elijah Passmore", email = "elijah.passmore@wattmaven.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["wattmaven", "solarnetwork"]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://wattmaven.com"
Source = "https://github.com/wattmaven/wattmaven-solarnetwork-tools"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen>=4.1.1",
    "lefthook>=1.10.10",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.4",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules
select = [
    "I",
    "N801",
    "N802",
    "N803",
    "N804",
    "N805",
    "N806",
    "N807",
    "N811",
    "N812",
    "N813",
    "N814",
    "N815",
    "N816",
    "N817",
    "N818",
    "N999",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
update_changelog_on_bump = true
